Added updates and new features

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "book",
-    "short_name": "book",
+    "name": "book_mobile",
+    "short_name": "book_mobile",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
