--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,36 +1,32 @@
-name: book
-description: A new Flutter project.
+name: book_mobile
+description: "A new Flutter project."
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
-# of the product and file versions while build-number is used as the build suffix.
+
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.1.0 <4.0.0"
+  sdk: ^3.5.2
 
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  http: ^1.1.0
+  cupertino_icons: ^1.0.8
+  shared_preferences: ^2.3.3
+  http: ^1.2.2
+  image_picker: ^1.1.2
   provider: ^6.1.2
-  image_picker: ^1.0.8
-  shared_preferences: ^2.2.3
+  flutter_facebook_auth: ^7.1.1
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
 
 # The following section is specific to Flutter packages.
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
@@ -38,7 +34,6 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
-  # To add custom fonts to your application, add a fonts section here,
   # fonts:
   #   - family: Schyler
   #     fonts:
@@ -50,3 +45,4 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+  #
