--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,12 @@ dependencies:
   provider: ^6.1.2
   flutter_facebook_auth: ^7.1.1
   google_sign_in: ^6.2.2
+  path: ^1.9.0
+  flutter_pdfview: ^1.3.4
+  path_provider: ^2.1.5
+  mime: ^2.0.0
+  http_parser: ^4.0.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
