--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   http_parser: ^4.0.2
   intl: ^0.19.0
   url_launcher: ^6.3.1
+  connectivity_plus: ^6.1.0
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
