--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   url_launcher: ^6.3.1
   connectivity_plus: ^6.1.0
   audioplayers: ^6.1.0
+  sign_in_button: ^3.2.0
 
 dev_dependencies:
   flutter_test:
@@ -39,8 +40,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # fonts:
