--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,11 @@ dependencies:
   http_parser: ^4.0.2
   intl: ^0.19.0
   url_launcher: ^6.3.1
+  share_plus: ^10.1.2
   connectivity_plus: ^6.1.0
   audioplayers: ^6.1.0
-  sign_in_button: ^3.2.0
+  flutter_local_notifications: ^18.0.1
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
