--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,7 +40,7 @@ android {
 
     buildTypes {
         debug {
-            signingConfig signingConfigs.debug  // Correct syntax
+            signingConfig signingConfigs.debug
         }
         release {
             signingConfig signingConfigs.release
@@ -54,4 +54,8 @@ android {
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+    implementation 'com.google.android.gms:play-services-auth:21.2.0'
 }
