theme consistency, responsivenes are fixed, profil update is completted

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,17 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^27.2.4
   syncfusion_flutter_core: ^27.2.4
   encrypt: ^5.0.3
+  flutter_launcher_icons: ^0.14.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^4.0.0
-
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/ic_launcher.png"
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
