the app icon is changed using flutter_launcher_icons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,13 @@ dev_dependencies:
 
   flutter_lints: ^4.0.0
 flutter_launcher_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "assets/icons/ic_launcher.png"
+  adaptive_icon_background: "#FF6A331E"
+  adaptive_icon_foreground: "assets/icons/ic_launcher.png"
+  remove_alpha_ios: true
+
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
