notification, password change, profile update, and announcement done

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,7 @@ android {
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -58,4 +59,5 @@ flutter {
 
 dependencies {
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
