--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,4 +60,6 @@ flutter {
 dependencies {
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-}
+    implementation "androidx.media:media:1.5.0"
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.18.7'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.7'}
