--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,6 @@ dependencies:
   url_launcher: ^6.3.1
   share_plus: ^10.1.2
   connectivity_plus: ^6.1.0
-  audioplayers: ^6.1.0
   flutter_local_notifications: ^18.0.1
   workmanager: ^0.5.2
   dio: ^5.7.0
@@ -40,6 +39,9 @@ dependencies:
   device_info_plus: ^10.1.2
   permission_handler: ^11.3.1
   wolt_modal_sheet: ^0.9.4
+  just_audio: ^0.9.42
+  audio_session: ^0.1.21
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
