--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   just_audio: ^0.9.42
   audio_session: ^0.1.21
   rxdart: ^0.28.0
+  flutter_slidable: ^3.1.2
 
 dev_dependencies:
   flutter_test:
