--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.media:media:1.5.0"
     implementation 'com.google.android.exoplayer:exoplayer-core:2.18.7'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.7'}
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.7'
+    implementation 'com.facebook.android:facebook-login:latest.release'
+}
