--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   video_player: ^2.9.2
   docx_viewer: ^0.2.1
   flutter_epub_viewer: ^1.1.6
+  app_links: ^6.3.3
+  device_preview_plus: ^2.2.0
+  no_screenshot: ^0.3.1
 
 dev_dependencies:
   flutter_test:
