--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   app_links: ^6.3.3
   device_preview_plus: ^2.2.0
   no_screenshot: ^0.3.1
+  flutter_typeahead: ^5.2.0
 
 dev_dependencies:
   flutter_test:
