--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   device_preview_plus: ^2.2.0
   no_screenshot: ^0.3.1
   flutter_typeahead: ^5.2.0
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
