--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -17,13 +17,13 @@ android {
 
     signingConfigs {
         debug {
-            storeFile file('C:/Users/SAM/.android/debug.keystore')  // Corrected file path format
+            storeFile file('./debug.keystore')  // Corrected file path format
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
         release {
-            storeFile file('C:/Users/SAM/.android/release-key.jks')  // Corrected file path format
+            storeFile file('./release-key.jks')  // Corrected file path format
             storePassword 'android'
             keyAlias 'releaseKey'
             keyPassword 'android'
