--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   no_screenshot: ^0.3.1
   flutter_typeahead: ^5.2.0
   flutter_spinkit: ^5.2.1
+  dropdown_search: ^6.0.1
 
 dev_dependencies:
   flutter_test:
