--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_typeahead: ^5.2.0
   flutter_spinkit: ^5.2.1
   dropdown_search: ^6.0.1
+  go_router: ^14.6.3
 
 dev_dependencies:
   flutter_test:
