--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   flutter_spinkit: ^5.2.1
   dropdown_search: ^6.0.1
   go_router: ^14.6.3
+  animated_dropdown_search_codespark: ^2.0.2
+  file_picker: ^8.1.7
 
 dev_dependencies:
   flutter_test:
