--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,9 +1,14 @@
+
 plugins {
     id "com.android.application"
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
+
+def keystorePropertiesFile = rootProject.file("key.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
     namespace = "com.example.book_mobile"
@@ -23,10 +28,10 @@ android {
             keyPassword 'android'
         }
         release {
-            storeFile file('./release-key.jks')  // Corrected file path format
-            storePassword 'android'
-            keyAlias 'releaseKey'
-            keyPassword 'android'
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
         }
     }
 
