epub reader modified

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@ package="com.example.book_mobile">
         android:label="Dr. MenoreRead"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        android:usesCleartextTraffic="true"
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
