--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@ package="com.example.book_mobile">
     <application
         android:label="Dr. MenoreRead"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         android:usesCleartextTraffic="true"
 
         <activity
