--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^28.1.33
   syncfusion_flutter_core: ^28.1.33
   encrypt: ^5.0.3
-  # flutter_launcher_icons: ^0.14.1
+  flutter_launcher_icons:
   device_info_plus: ^10.1.2
   permission_handler: ^11.3.1
   audio_session: ^0.1.21
@@ -54,13 +54,11 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
-# flutter_launcher_icons:
-#   android: true
-#   ios: true
-#   image_path: "assets/icons/ic_launcher.png"
-#   adaptive_icon_background: "#FF6A331E"
-#   adaptive_icon_foreground: "assets/icons/ic_launcher.png"
-#   remove_alpha_ios: true
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  adaptive_icon_background: "#FFFFFF"
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -69,6 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icon/
   #   - images/a_dot_ham.jpeg
 
   # fonts:
