--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,6 +3,18 @@ allprojects {
         google()
         mavenCentral()
     }
+     // Add this part when the cosmos complains about isar_flutter lib
+    subprojects {
+        afterEvaluate { project ->
+            if (project.hasProperty('android')) {
+                project.android {
+                    if (namespace == null) {
+                        namespace project.group
+                    }
+                }
+            }
+        }
+    }
 }
 
 rootProject.buildDir = "../build"
