--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,42 +1,73 @@
-name: iOS-build
+name: iOS-ipa-build-etbooks
 
 on:
   workflow_dispatch:
 
 jobs:
   build-ios:
-    name: 🎉 iOS Build
+    name: 📚 iOS Build for ET-Books
     runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
 
-      - uses: subosito/flutter-action@v2
+    steps:
+      - name: 📦 Checkout repository
+        uses: actions/checkout@v3
+
+      - name: 🚀 Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
           architecture: x64
-      - run: flutter pub get
-      
 
-      - run: pod repo update
+      - name: 💾 Cache Flutter dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.pub-cache
+            .dart_tool
+          key: ${{ runner.os }}-flutter-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-flutter-
+
+      - name: 📥 Install dependencies
+        run: flutter pub get
+
+      - name: 🛠 Update CocoaPods repo
+        run: pod repo update
         working-directory: ios
 
-      - run: flutter build ios --release --no-codesign
+      - name: 🔧 Update iOS Deployment Target
+        run: |
+          sed -i '' 's/platform :ios, .*/platform :ios, \'12.0\'/' ios/Podfile
+          cd ios && pod install
 
-      - run: mkdir Payload
+      - name: 🔨 Build iOS (Release, No Code Signing)
+        run: flutter build ios --release --no-codesign
+
+      - name: 🗂 Create Payload folder
+        run: mkdir Payload
         working-directory: build/ios/iphoneos
 
-      - run: mv Runner.app/ Payload
+      - name: 📁 Move Runner.app into Payload
+        run: mv Runner.app Payload
         working-directory: build/ios/iphoneos
 
-      - name: Zip output
-        run: zip -qq -r -9 menore_ios.ipa Payload
+      - name: 📦 Package into et-books.ipa
+        run: zip -qq -r -9 et-books.ipa Payload
         working-directory: build/ios/iphoneos
 
-      - name: Upload binaries to release
+      - name: 🧹 Clean up Payload (optional)
+        run: rm -rf Payload
+        working-directory: build/ios/iphoneos
+
+      - name: 📤 Upload IPA to GitHub Release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/ios/iphoneos/menore_ios.ipa
-          tag: v1.0
+          file: build/ios/iphoneos/et-books.ipa
+          asset_name: et-books.ipa
+          tag: etbooks-${{ github.sha }}
           overwrite: true
-          body: "This is first release"
+          body: |
+            📘 ET-Books Release
+            - Commit: ${{ github.sha }}
+            - Built from GitHub Actions 🚀
