--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -35,6 +35,11 @@ jobs:
         run: pod repo update
         working-directory: ios
 
+      - name: 🔧 Update iOS Deployment Target
+        run: |
+          sed -i '' 's/platform :ios, .*/platform :ios, \'12.0\'/' ios/Podfile
+          cd ios && pod install
+
       - name: 🔨 Build iOS (Release, No Code Signing)
         run: flutter build ios --release --no-codesign
 
