--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: 🔧 Update iOS Deployment Target
         run: |
-          sed -i '' 's/platform :ios, .*/platform :ios, \'12.0\'/' ios/Podfile
+          sed -i '' "s/platform :ios, .*/platform :ios, '12.0'/" ios/Podfile
           cd ios && pod install
 
       - name: 🔨 Build iOS (Release, No Code Signing)
